--- a/project0/index.html
+++ b/project0/index.html
@@ -1,10 +1,50 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>My Webpage</title>
+    <head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	
+		<!-- favicon stuff here -->
+		<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=Lb54lPdm0L">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=Lb54lPdm0L">
+		<link rel="icon" type="image/png" href="/favicon-32x32.png?v=Lb54lPdm0L" sizes="32x32">
+		<link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=Lb54lPdm0L" sizes="192x192">
+		<link rel="icon" type="image/png" href="/favicon-96x96.png?v=Lb54lPdm0L" sizes="96x96">
+		<link rel="icon" type="image/png" href="/favicon-16x16.png?v=Lb54lPdm0L" sizes="16x16">
+		<link rel="manifest" href="/manifest.json?v=Lb54lPdm0L">
+		<link rel="shortcut icon" href="/favicon.ico?v=Lb54lPdm0L">
+		<meta name="msapplication-TileColor" content="#0087bf">
+		<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Lb54lPdm0L">
+		<meta name="theme-color" content="#0087BF">
+
+		<!-- Site specific meta data -->
+		<title>Alex Donald</title>
+		<meta name="description" content="Alex Donald's website and projects.">
+		<meta name="keywords" content="Alex, Donald, Alex Donald">
+		<meta name="author" content="Alex Donald">
+
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+		<!-- Custom CSS -->
 		<link rel="stylesheet" src="css/styles.css">
-	</head>
-	<body>
-		Hello, world!
-	</body>
+    </head>
+    <body>
+		<h1>CS50W Project 0</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Page 1</a></li>
+				<li><a href="#">Page 2</a></li>
+				<li><a href="#">Page 3</a></li>
+				<li><a href="#">Page 4</a></li>
+			</ul>
+		</nav>
+    </body>
 </html>
