--- a/project0/index.html
+++ b/project0/index.html
@@ -46,5 +46,11 @@
 				<li><a href="#">Page 4</a></li>
 			</ul>
 		</nav>
+		<main>
+			<p>This is the body of the website.</p>
+		</main>
+		<footer>
+			&copy; Alex Donald.
+		</footer>
     </body>
 </html>
