Set index to cover image page

--- a/project0/index.html
+++ b/project0/index.html
@@ -1,56 +1,69 @@
 <!DOCTYPE html>
 <html>
-    <head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	
-		<!-- favicon stuff here -->
-		<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=Lb54lPdm0L">
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=Lb54lPdm0L">
-		<link rel="icon" type="image/png" href="/favicon-32x32.png?v=Lb54lPdm0L" sizes="32x32">
-		<link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=Lb54lPdm0L" sizes="192x192">
-		<link rel="icon" type="image/png" href="/favicon-96x96.png?v=Lb54lPdm0L" sizes="96x96">
-		<link rel="icon" type="image/png" href="/favicon-16x16.png?v=Lb54lPdm0L" sizes="16x16">
-		<link rel="manifest" href="/manifest.json?v=Lb54lPdm0L">
-		<link rel="shortcut icon" href="/favicon.ico?v=Lb54lPdm0L">
-		<meta name="msapplication-TileColor" content="#0087bf">
-		<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Lb54lPdm0L">
-		<meta name="theme-color" content="#0087BF">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-		<!-- Site specific meta data -->
-		<title>Alex Donald</title>
-		<meta name="description" content="Alex Donald's website and projects.">
-		<meta name="keywords" content="Alex, Donald, Alex Donald">
-		<meta name="author" content="Alex Donald">
+	<!-- favicon stuff here -->
+	<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png?v=Lb54lPdm0L">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png?v=Lb54lPdm0L">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png?v=Lb54lPdm0L" sizes="32x32">
+	<link rel="icon" type="image/png" href="/android-chrome-192x192.png?v=Lb54lPdm0L" sizes="192x192">
+	<link rel="icon" type="image/png" href="/favicon-96x96.png?v=Lb54lPdm0L" sizes="96x96">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png?v=Lb54lPdm0L" sizes="16x16">
+	<link rel="manifest" href="/manifest.json?v=Lb54lPdm0L">
+	<link rel="shortcut icon" href="/favicon.ico?v=Lb54lPdm0L">
+	<meta name="msapplication-TileColor" content="#0087bf">
+	<meta name="msapplication-TileImage" content="/mstile-144x144.png?v=Lb54lPdm0L">
+	<meta name="theme-color" content="#0087BF">
 
-		<!-- Bootstrap -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<!-- Custom CSS -->
-		<link rel="stylesheet" src="css/styles.css">
-    </head>
-    <body>
-		<h1>CS50W Project 0</h1>
-		<nav>
-			<ul>
-				<li><a href="#">Page 1</a></li>
-				<li><a href="#">Page 2</a></li>
-				<li><a href="#">Page 3</a></li>
-				<li><a href="#">Page 4</a></li>
-			</ul>
-		</nav>
-		<main>
-			<p>This is the body of the website.</p>
+	<!-- Site specific meta data -->
+	<title>Alex Donald</title>
+	<meta name="description" content="Alex Donald's website and projects.">
+	<meta name="keywords" content="Alex, Donald, Alex Donald">
+	<meta name="author" content="Alex Donald">
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<!-- Custom CSS -->
+	<link rel="stylesheet" src="css/styles.css">
+</head>
+<body class="text-center">
+	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+		<header class="masthead mb-auto">
+			<div class="inner">
+				<h3 class="masthead-brand">Cover</h3>
+				<nav class="nav nav-masthead justify-content-center">
+					<a class="nav-link active" href="/">Home</a>
+					<a class="nav-link" href="/MotorbikeList.html">Motorbikes</a>
+					<a class="nav-link" href="/MotorbikeVanVan.html">Van Van</a>
+					<a class="nav-link" href="/MotorbikeBandit.html">Bandit</a>
+				</nav>
+			</div>
+		</header>
+
+		<main role="main" class="inner cover">
+			<h1 class="cover-heading">Alex's Motorbikes</h1>
+			<p class="lead">This is a simple website designed to showcase the motorbikes I have owned during my time as a biker.</p>
+			<p class="lead">
+				<a href="/MotorbikeList.html" class="btn btn-lg btn-secondary">See The Bikes</a>
+			</p>
 		</main>
-		<footer>
-			&copy; Alex Donald.
+
+		<footer class="mastfoot mt-auto">
+			<div class="inner">
+				<p>&copy; <a href="https://www.alexdonald.co.uk">Alex Donald</a>.</p>
+			</div>
 		</footer>
-    </body>
+	</div>
+</body>
 </html>
