--- a/project0/index.html
+++ b/project0/index.html
@@ -41,12 +41,12 @@
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		<header class="masthead mb-auto">
 			<div class="inner">
-				<h3 class="masthead-brand">Cover</h3>
+				<h3 class="masthead-brand">Alex's Motorbikes</h3>
 				<nav class="nav nav-masthead justify-content-center">
 					<a class="nav-link active" href="/">Home</a>
-					<a class="nav-link" href="/MotorbikeList.html">Motorbikes</a>
-					<a class="nav-link" href="/MotorbikeVanVan.html">Van Van</a>
-					<a class="nav-link" href="/MotorbikeBandit.html">Bandit</a>
+					<a class="nav-link" href="MotorbikeList.html">Motorbikes</a>
+					<a class="nav-link" href="MotorbikeVanVan.html">Van Van</a>
+					<a class="nav-link" href="MotorbikeBandit.html">Bandit</a>
 				</nav>
 			</div>
 		</header>
@@ -55,7 +55,7 @@
 			<h1 class="cover-heading">Alex's Motorbikes</h1>
 			<p class="lead">This is a simple website designed to showcase the motorbikes I have owned during my time as a biker.</p>
 			<p class="lead">
-				<a href="/MotorbikeList.html" class="btn btn-lg btn-secondary">See The Bikes</a>
+				<a href="MotorbikeList.html" class="btn btn-lg btn-secondary">See The Bikes</a>
 			</p>
 		</main>
 
