--- a/project0/index.html
+++ b/project0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="frontpage">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="text-center">
+<body class="text-center frontpage">
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		<header class="masthead mb-auto">
 			<div class="inner">
