--- a/project0/index.html
+++ b/project0/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="frontpage">
+<html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,9 +35,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- Custom CSS -->
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles_frontpage.css">
 </head>
-<body class="text-center frontpage">
+<body class="text-center">
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		<header class="masthead mb-auto">
 			<div class="inner">
