--- a/project0/index.html
+++ b/project0/index.html
@@ -43,7 +43,7 @@
 			<div class="inner">
 				<h3 class="masthead-brand">Alex's Motorbikes</h3>
 				<nav class="nav nav-masthead justify-content-center">
-					<a class="nav-link active" href="/">Home</a>
+					<a class="nav-link active" href="./index.html">Home</a>
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
 					<a class="nav-link" href="./MotorbikeBandit.html">Bandit</a>
