--- a/project0/MotorbikeList.html
+++ b/project0/MotorbikeList.html
@@ -98,10 +98,11 @@
 			</table>
 		</section>
 	</main>
-	<footer>
-		&copy; Alex Donald.
+	<footer class="footer mt-auto py-3">
+		<div class="container">
+		  <span class="text-muted">&copy; <a href="https://www.alexdonald.co.uk">Alex Donald</a>.</span>
+		</div>
 	</footer>
-
 	<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
