top padding for fixed nav

--- a/project0/MotorbikeVanVan.html
+++ b/project0/MotorbikeVanVan.html
@@ -63,38 +63,8 @@
 	</nav>
 	<main class="container">
 		<section>
-			<h1>Motorbikes I have owned</h1>
-			<table class="table table-hover">
-				<caption>List of motorbikes</caption>
-				<thead class="thead-dark">
-					<tr>
-						<th scope="col">Marque</th>
-						<th scope="col">Model</th>
-						<th scope="col">Category</th>
-						<th scope="col">Engine Size (cc)</th>
-						<th scope="col">Colour</th>
-						<th scope="col">Dates</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<td>Suzuki</td>
-						<td><a href="./MotorbikeVanVan.html">RV125 Van Van</a></td>
-						<td>Scrambler</td>
-						<td>125</td>
-						<td>Brown/Grey</td>
-						<td>2015-2017</td>
-					</tr>
-					<tr>
-						<td>Suzuki</td>
-						<td><a href="./MotorbikeBandit.html">GSF650 Bandit</a></td>
-						<td>Sports Tourer</td>
-						<td>650</td>
-						<td>Metallic Blue</td>
-						<td>2017-present</td>
-					</tr>
-				</tbody>
-			</table>
+			<h2>Suzuki Van Van</h2>
+			
 		</section>
 	</main>
 	<footer class="footer mt-auto py-3">
