--- a/project0/MotorbikeList.html
+++ b/project0/MotorbikeList.html
@@ -46,10 +46,10 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="./index.html">Home</a>
+				</li>
+				<li class="nav-item active">
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 				</li>
 				<li class="nav-item">
