Added Van Van page

--- a/project0/MotorbikeVanVan.html
+++ b/project0/MotorbikeVanVan.html
@@ -46,13 +46,13 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+				<li class="nav-item">
+					<a class="nav-link" href="./index.html">Home</span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item active">
 					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
 				</li>
 				<li class="nav-item">
@@ -64,7 +64,38 @@
 	<main class="container">
 		<section>
 			<h2>Suzuki Van Van</h2>
-			
+			<div class="row  row-cols-1 row-cols-md-2">
+				<div class="col mb-3">
+					<div class="card h-100">
+						<div class="row no-gutters">
+							<img src="img/vanvan1.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<p class="card-text">Going off the beaten track.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-3">
+					<div class="card h-100">
+						<div class="row no-gutters">
+							<img src="img/vanvan2.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<p class="card-text">Parked up at the end of the day.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col mb-3">
+					<div class="card h-100">
+						<div class="row no-gutters">
+							<img src="img/vanvan3.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<p class="card-text">Taking in the country views.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</section>
 	</main>
 	<footer class="footer mt-auto py-3">
