--- a/project0/MotorbikeBandit.html
+++ b/project0/MotorbikeBandit.html
@@ -53,7 +53,7 @@
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./Motorbikebandit.html">Van Van</a>
+					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="./MotorbikeBandit.html">Bandit</a>
