Refactored menu list to remove bikes and add info

--- a/project0/MotorbikeList.html
+++ b/project0/MotorbikeList.html
@@ -53,10 +53,7 @@
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="./MotorbikeBandit.html">Bandit</a>
+					<a class="nav-link" href="./MotorbikeInfo.html">Info</a>
 				</li>
 			</ul>
 		</div>
