--- a/project0/MotorbikeVanVan.html
+++ b/project0/MotorbikeVanVan.html
@@ -47,16 +47,13 @@
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item">
-					<a class="nav-link" href="./index.html">Home</span></a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
+					<a class="nav-link" href="./index.html">Home</a>
 				</li>
 				<li class="nav-item active">
-					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
+					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="./MotorbikeBandit.html">Bandit</a>
+					<a class="nav-link" href="./MotorbikeInfo.html">Info</a>
 				</li>
 			</ul>
 		</div>
@@ -64,6 +61,7 @@
 	<main class="container">
 		<section>
 			<h2>Suzuki Van Van</h2>
+			<p><a href="./MotorbikeList.html">Back to motorbike list</a>.</p>
 			<div class="row  row-cols-1 row-cols-md-2">
 				<div class="col mb-3">
 					<div class="card h-100">
