--- a/project0/index.html
+++ b/project0/index.html
@@ -45,8 +45,7 @@
 				<nav class="nav nav-masthead justify-content-center">
 					<a class="nav-link active" href="./index.html">Home</a>
 					<a class="nav-link" href="./MotorbikeList.html">Motorbikes</a>
-					<a class="nav-link" href="./MotorbikeVanVan.html">Van Van</a>
-					<a class="nav-link" href="./MotorbikeBandit.html">Bandit</a>
+					<a class="nav-link" href="./MotorbikeInfo.html">Info</a>
 				</nav>
 			</div>
 		</header>
